--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
   <body>
     <h1>SijiSam</h1>
     <img src="https://avatars.githubusercontent.com/u/66210709?v=4">
-    Hello there, awesome person! 
+    Hello there, awesome person!
+    <ol>
+    <li>Youtube</li>
+    <li>Facebook</li>
+    <li>Google</li>
+</ol>
+
   </body>
 </html>
