--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <img src="https://avatars.githubusercontent.com/u/66210709?v=4">
     Hello there, awesome person!
     <ol>
-    <li>Youtube</li>
-    <li>Facebook</li>
-    <li>Google</li>
-</ol>
+     <li><a href="https://www.youtube.com/">Youtube</a></li>
+     <li><a href="https://www.facebook.com/">Facebook</a></li>
+     <li><a href="https://www.google.co.in/">Google</a></li>
+    </ol>
 
   </body>
 </html>
